Made Stub screen a bit more interesting by adding a couple of configurations and made them accessible through the Navigation Drawer

--- a/app/src/main/res/layout/stub.xml
+++ b/app/src/main/res/layout/stub.xml
@@ -7,11 +7,11 @@
     android:background="@android:color/holo_red_light">
 
     <TextView
+        android:id="@+id/stub_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="30sp"
-        android:text="STUB SCREEN"/>
+        android:textSize="30sp"/>
 
 </co.lemonlabs.mortar.example.ui.views.StubView>
