--- a/app/src/main/res/layout/stub.xml
+++ b/app/src/main/res/layout/stub.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_red_light">
 
-    <TextView
+    <Button
         android:id="@+id/stub_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
