--- a/app/src/main/res/animator/slide_in_left.xml
+++ b/app/src/main/res/animator/slide_in_left.xml
@@ -1,8 +1,8 @@
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-                android:valueFrom="-1080"
+                android:valueFrom="-1.0"
                 android:valueTo="0"
-                android:propertyName="x"
+                android:propertyName="xFraction"
                 android:valueType="floatType"
-                android:interpolator="@android:interpolator/decelerate_quad"
+                android:interpolator="@android:interpolator/accelerate_quad"
                 android:duration="@android:integer/config_mediumAnimTime">
 </objectAnimator>
