--- a/app/src/main/res/animator/slide_in_right.xml
+++ b/app/src/main/res/animator/slide_in_right.xml
@@ -1,7 +1,7 @@
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-                android:valueFrom="1080"
+                android:valueFrom="1.0"
                 android:valueTo="0"
-                android:propertyName="x"
+                android:propertyName="xFraction"
                 android:valueType="floatType"
                 android:interpolator="@android:interpolator/decelerate_quad"
                 android:duration="@android:integer/config_mediumAnimTime">
