--- a/app/src/main/res/animator/slide_out_right.xml
+++ b/app/src/main/res/animator/slide_out_right.xml
@@ -1,8 +1,8 @@
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
                 android:valueFrom="0"
-                android:valueTo="1080"
-                android:propertyName="x"
+                android:valueTo="1.0"
+                android:propertyName="xFraction"
                 android:valueType="floatType"
-                android:interpolator="@android:interpolator/decelerate_quad"
+                android:interpolator="@android:interpolator/accelerate_quad"
                 android:duration="@android:integer/config_mediumAnimTime">
 </objectAnimator>
