--- a/app/src/main/res/animator/slide_out_top.xml
+++ b/app/src/main/res/animator/slide_out_top.xml
@@ -1,7 +1,7 @@
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
                 android:valueFrom="0"
-                android:valueTo="-1920"
-                android:propertyName="y"
+                android:valueTo="-1.0"
+                android:propertyName="yFraction"
                 android:valueType="floatType"
                 android:interpolator="@android:interpolator/decelerate_quad"
                 android:duration="@android:integer/config_mediumAnimTime">
