--- a/app/src/main/res/layout/stubx.xml
+++ b/app/src/main/res/layout/stubx.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<co.lemonlabs.mortar.example.ui.views.StubView
+<co.lemonlabs.mortar.example.ui.views.StubXView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +14,4 @@
         android:gravity="center"
         android:textSize="30sp"/>
 
-</co.lemonlabs.mortar.example.ui.views.StubView>
+</co.lemonlabs.mortar.example.ui.views.StubXView>
