--- a/app/src/main/res/layout/nested.xml
+++ b/app/src/main/res/layout/nested.xml
@@ -3,8 +3,7 @@
 <co.lemonlabs.mortar.example.ui.views.NestedView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
+    android:layout_height="match_parent">
 
 
     <co.lemonlabs.mortar.example.ui.views.NestedChildView
@@ -12,15 +11,14 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        android:background="@android:color/white"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_gravity="center"
-            android:text="I'M A CHILD"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:src="@drawable/doge"/>
 
     </co.lemonlabs.mortar.example.ui.views.NestedChildView>
 
